got all the assets brought in

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.31.3)
 
 project(darts LANGUAGES CXX)
 
-set(SOURCE_FILES src/main.cpp)
+set(SOURCE_FILES src/main.cpp src/app.cpp)
 
 # Find SFML package
 # find_package(SFML REQUIRED)  # couldn't find it
@@ -24,4 +24,13 @@ target_compile_features(darts PRIVATE cxx_std_17)
 
 # Link against SFML
 target_link_libraries(darts PRIVATE SFML::Graphics)
+
+# Include directories
+target_include_directories(darts PRIVATE include)
+
+# Copy over assets
+add_custom_target(copy_assets
+    COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/assets" "${CMAKE_BINARY_DIR}/assets"
+)
+add_dependencies(darts copy_assets)
 
