The buttons work now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,7 @@ cmake_minimum_required(VERSION 3.31.3)
 
 project(darts LANGUAGES CXX)
 
-set(SOURCE_FILES 
-    src/main.cpp 
-    src/app.cpp 
-    src/Background.cpp 
-    src/Koala.cpp 
-    src/Coconut.cpp 
-    src/AudioService.cpp
-    src/TextService.cpp
-)
+file(GLOB SOURCE_FILES src/*.cpp)
 
 # Find SFML package
 # find_package(SFML REQUIRED)  # couldn't find it even though brew installed
